// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Add correct channel and open modal 1`] = `
"<div id=\\"application\\">
    <div class=\\"spinner\\" style=\\"display: none;\\">
        <div class=\\"bg-white opct fixed-top h-100 w-100 d-flex align-items-center justify-content-center\\">
            <div class=\\"spinner-border text-info p-4\\" role=\\"status\\">
                <span class=\\"sr-only\\">Loading...</span>
            </div>
        </div>
    </div>
    <div class=\\"modal fade\\" id=\\"modal-post\\" tabindex=\\"-1\\" role=\\"dialog\\" aria-labelledby=\\"infoModalLabel\\" aria-hidden=\\"true\\">
        <div class=\\"modal-dialog\\" role=\\"document\\">
            <div class=\\"modal-content\\">
                <div class=\\"modal-header\\">
                    <h5 class=\\"modal-title\\" id=\\"modal-post-label\\"></h5>
                    <button type=\\"button\\" class=\\"close\\" data-dismiss=\\"modal\\" aria-label=\\"Close\\">
                        <span aria-hidden=\\"true\\">×</span>
                    </button>
                </div>
                <div class=\\"modal-body\\"></div>
            </div>
        </div>
    </div>
    <div class=\\"container\\">
        <div id=\\"example-links\\" class=\\"alert alert-info w-100\\">
            Example RSS links:
            <a href=\\"https://ru.hexlet.io/lessons.rss\\">Hexlet Lessons</a>,
            <a href=\\"https://ru.hexlet.io/blog.rss\\">Hexlet Blog</a>,
            <a href=\\"http://lorem-rss.herokuapp.com/feed?unit=second&amp;interval=1\\">Lorem RSS 1 sec</a>,
            <a href=\\"http://lorem-rss.herokuapp.com/feed?unit=minute&amp;interval=1\\">Lorem RSS 1 min</a>,
            <a href=\\"http://lorem-rss.herokuapp.com/feed?unit=minute&amp;interval=7\\">Invalid Lorem RSS</a>,
            <a href=\\"http://lorem-rss.herokuapp.com/feed?unit=minute&amp;interval=70\\">Second Invalid Lorem RSS</a>,
            <a href=\\"http://feeds.bbci.co.uk/news/rss.xml\\">BBC News</a>
        </div>
        <form id=\\"form\\" class=\\"jumbotron pb-4 pt-4\\">
            <div class=\\"input-group\\">
                <div class=\\"input-group-prepend\\">
                    <span class=\\"input-group-text\\" id=\\"basic-addon1\\">Insert your RSS link</span>
                </div>
                <input name=\\"url\\" type=\\"text\\" id=\\"input-rss\\" class=\\"form-control alert-dark\\" placeholder=\\"Enter RSS link\\" aria-label=\\"RSS Link\\" aria-describedby=\\"basic-addon1\\">
                <div class=\\"input-group-append\\">
                    <a class=\\"btn btn-outline-secondary\\" id=\\"add-rss\\" role=\\"button\\">Get RSS</a>
                </div>
            </div>
        </form>
        <div id=\\"list-rss\\">
            <div class=\\"feed\\">
                <h5>Lorem ipsum feed for an interval of 1 minutes</h5>
                <p>This is a constantly updating lorem ipsum feed</p>
                <div class=\\"content\\">
                    <div class=\\"item mb-1 mt-1 d-flex align-items-center\\">
                        <button tabindex=\\"0\\" type=\\"button\\" class=\\"open-post btn-sm btn btn-info p-0 mr-2\\" data-toggle=\\"modal\\" data-target=\\"#infoModal\\" data-link=\\"http://example.com/test/1569324660\\">
                            Open
                        </button>
                        <a href=\\"http://example.com/test/1569324660\\" target=\\"_blank\\">Lorem ipsum 2019-09-24T11:31:00Z</a>
                    </div>
                    <div class=\\"item mb-1 mt-1 d-flex align-items-center\\">
                        <button tabindex=\\"0\\" type=\\"button\\" class=\\"open-post btn-sm btn btn-info p-0 mr-2\\" data-toggle=\\"modal\\" data-target=\\"#infoModal\\" data-link=\\"http://example.com/test/1569324600\\">
                            Open
                        </button>
                        <a href=\\"http://example.com/test/1569324600\\" target=\\"_blank\\">Lorem ipsum 2019-09-24T11:30:00Z</a>
                    </div>
                    <div class=\\"item mb-1 mt-1 d-flex align-items-center\\">
                        <button tabindex=\\"0\\" type=\\"button\\" class=\\"open-post btn-sm btn btn-info p-0 mr-2\\" data-toggle=\\"modal\\" data-target=\\"#infoModal\\" data-link=\\"http://example.com/test/1569324540\\">
                            Open
                        </button>
                        <a href=\\"http://example.com/test/1569324540\\" target=\\"_blank\\">Lorem ipsum 2019-09-24T11:29:00Z</a>
                    </div>
                    <div class=\\"item mb-1 mt-1 d-flex align-items-center\\">
                        <button tabindex=\\"0\\" type=\\"button\\" class=\\"open-post btn-sm btn btn-info p-0 mr-2\\" data-toggle=\\"modal\\" data-target=\\"#infoModal\\" data-link=\\"http://example.com/test/1569324480\\">
                            Open
                        </button>
                        <a href=\\"http://example.com/test/1569324480\\" target=\\"_blank\\">Lorem ipsum 2019-09-24T11:28:00Z</a>
                    </div>
                    <div class=\\"item mb-1 mt-1 d-flex align-items-center\\">
                        <button tabindex=\\"0\\" type=\\"button\\" class=\\"open-post btn-sm btn btn-info p-0 mr-2\\" data-toggle=\\"modal\\" data-target=\\"#infoModal\\" data-link=\\"http://example.com/test/1569324420\\">
                            Open
                        </button>
                        <a href=\\"http://example.com/test/1569324420\\" target=\\"_blank\\">Lorem ipsum 2019-09-24T11:27:00Z</a>
                    </div>
                    <div class=\\"item mb-1 mt-1 d-flex align-items-center\\">
                        <button tabindex=\\"0\\" type=\\"button\\" class=\\"open-post btn-sm btn btn-info p-0 mr-2\\" data-toggle=\\"modal\\" data-target=\\"#infoModal\\" data-link=\\"http://example.com/test/1569324360\\">
                            Open
                        </button>
                        <a href=\\"http://example.com/test/1569324360\\" target=\\"_blank\\">Lorem ipsum 2019-09-24T11:26:00Z</a>
                    </div>
                    <div class=\\"item mb-1 mt-1 d-flex align-items-center\\">
                        <button tabindex=\\"0\\" type=\\"button\\" class=\\"open-post btn-sm btn btn-info p-0 mr-2\\" data-toggle=\\"modal\\" data-target=\\"#infoModal\\" data-link=\\"http://example.com/test/1569324300\\">
                            Open
                        </button>
                        <a href=\\"http://example.com/test/1569324300\\" target=\\"_blank\\">Lorem ipsum 2019-09-24T11:25:00Z</a>
                    </div>
                    <div class=\\"item mb-1 mt-1 d-flex align-items-center\\">
                        <button tabindex=\\"0\\" type=\\"button\\" class=\\"open-post btn-sm btn btn-info p-0 mr-2\\" data-toggle=\\"modal\\" data-target=\\"#infoModal\\" data-link=\\"http://example.com/test/1569324240\\">
                            Open
                        </button>
                        <a href=\\"http://example.com/test/1569324240\\" target=\\"_blank\\">Lorem ipsum 2019-09-24T11:24:00Z</a>
                    </div>
                    <div class=\\"item mb-1 mt-1 d-flex align-items-center\\">
                        <button tabindex=\\"0\\" type=\\"button\\" class=\\"open-post btn-sm btn btn-info p-0 mr-2\\" data-toggle=\\"modal\\" data-target=\\"#infoModal\\" data-link=\\"http://example.com/test/1569324180\\">
                            Open
                        </button>
                        <a href=\\"http://example.com/test/1569324180\\" target=\\"_blank\\">Lorem ipsum 2019-09-24T11:23:00Z</a>
                    </div>
                    <div class=\\"item mb-1 mt-1 d-flex align-items-center\\">
                        <button tabindex=\\"0\\" type=\\"button\\" class=\\"open-post btn-sm btn btn-info p-0 mr-2\\" data-toggle=\\"modal\\" data-target=\\"#infoModal\\" data-link=\\"http://example.com/test/1569324120\\">
                            Open
                        </button>
                        <a href=\\"http://example.com/test/1569324120\\" target=\\"_blank\\">Lorem ipsum 2019-09-24T11:22:00Z</a>
                    </div>
                </div>
                <hr>
            </div>
        </div>
    </div>
</div>"
`;

exports[`Add correct channel and open modal 2`] = `
"<div id=\\"application\\">
    <div class=\\"spinner\\" style=\\"display: none;\\">
        <div class=\\"bg-white opct fixed-top h-100 w-100 d-flex align-items-center justify-content-center\\">
            <div class=\\"spinner-border text-info p-4\\" role=\\"status\\">
                <span class=\\"sr-only\\">Loading...</span>
            </div>
        </div>
    </div>
    <div class=\\"modal fade show\\" id=\\"modal-post\\" tabindex=\\"-1\\" role=\\"dialog\\" aria-labelledby=\\"infoModalLabel\\" style=\\"padding-right: 0px; display: block;\\" aria-modal=\\"true\\">
        <div class=\\"modal-dialog\\" role=\\"document\\">
            <div class=\\"modal-content\\">
                <div class=\\"modal-header\\">
                    <h5 class=\\"modal-title\\" id=\\"modal-post-label\\">http://example.com/test/1569324660</h5>
                    <button type=\\"button\\" class=\\"close\\" data-dismiss=\\"modal\\" aria-label=\\"Close\\">
                        <span aria-hidden=\\"true\\">×</span>
                    </button>
                </div>
                <div class=\\"modal-body\\">Qui deserunt excepteur eiusmod occaecat est qui excepteur laborum culpa exercitation.</div>
            </div>
        </div>
    </div>
    <div class=\\"container\\">
        <div id=\\"example-links\\" class=\\"alert alert-info w-100\\">
            Example RSS links:
            <a href=\\"https://ru.hexlet.io/lessons.rss\\">Hexlet Lessons</a>,
            <a href=\\"https://ru.hexlet.io/blog.rss\\">Hexlet Blog</a>,
            <a href=\\"http://lorem-rss.herokuapp.com/feed?unit=second&amp;interval=1\\">Lorem RSS 1 sec</a>,
            <a href=\\"http://lorem-rss.herokuapp.com/feed?unit=minute&amp;interval=1\\">Lorem RSS 1 min</a>,
            <a href=\\"http://lorem-rss.herokuapp.com/feed?unit=minute&amp;interval=7\\">Invalid Lorem RSS</a>,
            <a href=\\"http://lorem-rss.herokuapp.com/feed?unit=minute&amp;interval=70\\">Second Invalid Lorem RSS</a>,
            <a href=\\"http://feeds.bbci.co.uk/news/rss.xml\\">BBC News</a>
        </div>
        <form id=\\"form\\" class=\\"jumbotron pb-4 pt-4\\">
            <div class=\\"input-group\\">
                <div class=\\"input-group-prepend\\">
                    <span class=\\"input-group-text\\" id=\\"basic-addon1\\">Insert your RSS link</span>
                </div>
                <input name=\\"url\\" type=\\"text\\" id=\\"input-rss\\" class=\\"form-control alert-dark\\" placeholder=\\"Enter RSS link\\" aria-label=\\"RSS Link\\" aria-describedby=\\"basic-addon1\\">
                <div class=\\"input-group-append\\">
                    <a class=\\"btn btn-outline-secondary\\" id=\\"add-rss\\" role=\\"button\\">Get RSS</a>
                </div>
            </div>
        </form>
        <div id=\\"list-rss\\">
            <div class=\\"feed\\">
                <h5>Lorem ipsum feed for an interval of 1 minutes</h5>
                <p>This is a constantly updating lorem ipsum feed</p>
                <div class=\\"content\\">
                    <div class=\\"item mb-1 mt-1 d-flex align-items-center\\">
                        <button tabindex=\\"0\\" type=\\"button\\" class=\\"open-post btn-sm btn btn-info p-0 mr-2\\" data-toggle=\\"modal\\" data-target=\\"#infoModal\\" data-link=\\"http://example.com/test/1569324660\\">
                            Open
                        </button>
                        <a href=\\"http://example.com/test/1569324660\\" target=\\"_blank\\">Lorem ipsum 2019-09-24T11:31:00Z</a>
                    </div>
                    <div class=\\"item mb-1 mt-1 d-flex align-items-center\\">
                        <button tabindex=\\"0\\" type=\\"button\\" class=\\"open-post btn-sm btn btn-info p-0 mr-2\\" data-toggle=\\"modal\\" data-target=\\"#infoModal\\" data-link=\\"http://example.com/test/1569324600\\">
                            Open
                        </button>
                        <a href=\\"http://example.com/test/1569324600\\" target=\\"_blank\\">Lorem ipsum 2019-09-24T11:30:00Z</a>
                    </div>
                    <div class=\\"item mb-1 mt-1 d-flex align-items-center\\">
                        <button tabindex=\\"0\\" type=\\"button\\" class=\\"open-post btn-sm btn btn-info p-0 mr-2\\" data-toggle=\\"modal\\" data-target=\\"#infoModal\\" data-link=\\"http://example.com/test/1569324540\\">
                            Open
                        </button>
                        <a href=\\"http://example.com/test/1569324540\\" target=\\"_blank\\">Lorem ipsum 2019-09-24T11:29:00Z</a>
                    </div>
                    <div class=\\"item mb-1 mt-1 d-flex align-items-center\\">
                        <button tabindex=\\"0\\" type=\\"button\\" class=\\"open-post btn-sm btn btn-info p-0 mr-2\\" data-toggle=\\"modal\\" data-target=\\"#infoModal\\" data-link=\\"http://example.com/test/1569324480\\">
                            Open
                        </button>
                        <a href=\\"http://example.com/test/1569324480\\" target=\\"_blank\\">Lorem ipsum 2019-09-24T11:28:00Z</a>
                    </div>
                    <div class=\\"item mb-1 mt-1 d-flex align-items-center\\">
                        <button tabindex=\\"0\\" type=\\"button\\" class=\\"open-post btn-sm btn btn-info p-0 mr-2\\" data-toggle=\\"modal\\" data-target=\\"#infoModal\\" data-link=\\"http://example.com/test/1569324420\\">
                            Open
                        </button>
                        <a href=\\"http://example.com/test/1569324420\\" target=\\"_blank\\">Lorem ipsum 2019-09-24T11:27:00Z</a>
                    </div>
                    <div class=\\"item mb-1 mt-1 d-flex align-items-center\\">
                        <button tabindex=\\"0\\" type=\\"button\\" class=\\"open-post btn-sm btn btn-info p-0 mr-2\\" data-toggle=\\"modal\\" data-target=\\"#infoModal\\" data-link=\\"http://example.com/test/1569324360\\">
                            Open
                        </button>
                        <a href=\\"http://example.com/test/1569324360\\" target=\\"_blank\\">Lorem ipsum 2019-09-24T11:26:00Z</a>
                    </div>
                    <div class=\\"item mb-1 mt-1 d-flex align-items-center\\">
                        <button tabindex=\\"0\\" type=\\"button\\" class=\\"open-post btn-sm btn btn-info p-0 mr-2\\" data-toggle=\\"modal\\" data-target=\\"#infoModal\\" data-link=\\"http://example.com/test/1569324300\\">
                            Open
                        </button>
                        <a href=\\"http://example.com/test/1569324300\\" target=\\"_blank\\">Lorem ipsum 2019-09-24T11:25:00Z</a>
                    </div>
                    <div class=\\"item mb-1 mt-1 d-flex align-items-center\\">
                        <button tabindex=\\"0\\" type=\\"button\\" class=\\"open-post btn-sm btn btn-info p-0 mr-2\\" data-toggle=\\"modal\\" data-target=\\"#infoModal\\" data-link=\\"http://example.com/test/1569324240\\">
                            Open
                        </button>
                        <a href=\\"http://example.com/test/1569324240\\" target=\\"_blank\\">Lorem ipsum 2019-09-24T11:24:00Z</a>
                    </div>
                    <div class=\\"item mb-1 mt-1 d-flex align-items-center\\">
                        <button tabindex=\\"0\\" type=\\"button\\" class=\\"open-post btn-sm btn btn-info p-0 mr-2\\" data-toggle=\\"modal\\" data-target=\\"#infoModal\\" data-link=\\"http://example.com/test/1569324180\\">
                            Open
                        </button>
                        <a href=\\"http://example.com/test/1569324180\\" target=\\"_blank\\">Lorem ipsum 2019-09-24T11:23:00Z</a>
                    </div>
                    <div class=\\"item mb-1 mt-1 d-flex align-items-center\\">
                        <button tabindex=\\"0\\" type=\\"button\\" class=\\"open-post btn-sm btn btn-info p-0 mr-2\\" data-toggle=\\"modal\\" data-target=\\"#infoModal\\" data-link=\\"http://example.com/test/1569324120\\">
                            Open
                        </button>
                        <a href=\\"http://example.com/test/1569324120\\" target=\\"_blank\\">Lorem ipsum 2019-09-24T11:22:00Z</a>
                    </div>
                </div>
                <hr>
            </div>
        </div>
    </div>
</div>



<div class=\\"modal-backdrop fade show\\"></div>"
`;

exports[`Add wrong channel 1`] = `
"<div id=\\"application\\">
    <div class=\\"spinner\\" style=\\"display: none;\\">
        <div class=\\"bg-white opct fixed-top h-100 w-100 d-flex align-items-center justify-content-center\\">
            <div class=\\"spinner-border text-info p-4\\" role=\\"status\\">
                <span class=\\"sr-only\\">Loading...</span>
            </div>
        </div>
    </div>
    <div class=\\"modal fade\\" id=\\"modal-post\\" tabindex=\\"-1\\" role=\\"dialog\\" aria-labelledby=\\"infoModalLabel\\" aria-hidden=\\"true\\">
        <div class=\\"modal-dialog\\" role=\\"document\\">
            <div class=\\"modal-content\\">
                <div class=\\"modal-header\\">
                    <h5 class=\\"modal-title\\" id=\\"modal-post-label\\"></h5>
                    <button type=\\"button\\" class=\\"close\\" data-dismiss=\\"modal\\" aria-label=\\"Close\\">
                        <span aria-hidden=\\"true\\">×</span>
                    </button>
                </div>
                <div class=\\"modal-body\\"></div>
            </div>
        </div>
    </div>
    <div class=\\"container\\">
        <div id=\\"example-links\\" class=\\"alert alert-info w-100\\">
            Example RSS links:
            <a href=\\"https://ru.hexlet.io/lessons.rss\\">Hexlet Lessons</a>,
            <a href=\\"https://ru.hexlet.io/blog.rss\\">Hexlet Blog</a>,
            <a href=\\"http://lorem-rss.herokuapp.com/feed?unit=second&amp;interval=1\\">Lorem RSS 1 sec</a>,
            <a href=\\"http://lorem-rss.herokuapp.com/feed?unit=minute&amp;interval=1\\">Lorem RSS 1 min</a>,
            <a href=\\"http://lorem-rss.herokuapp.com/feed?unit=minute&amp;interval=7\\">Invalid Lorem RSS</a>,
            <a href=\\"http://lorem-rss.herokuapp.com/feed?unit=minute&amp;interval=70\\">Second Invalid Lorem RSS</a>,
            <a href=\\"http://feeds.bbci.co.uk/news/rss.xml\\">BBC News</a>
        </div>
        <form id=\\"form\\" class=\\"jumbotron pb-4 pt-4\\">
            <div class=\\"input-group\\">
                <div class=\\"input-group-prepend\\">
                    <span class=\\"input-group-text\\" id=\\"basic-addon1\\">Insert your RSS link</span>
                </div>
                <input name=\\"url\\" type=\\"text\\" id=\\"input-rss\\" class=\\"form-control alert-danger\\" placeholder=\\"Enter RSS link\\" aria-label=\\"RSS Link\\" aria-describedby=\\"basic-addon1\\">
                <div class=\\"input-group-append\\">
                    <a class=\\"btn btn-outline-secondary\\" id=\\"add-rss\\" role=\\"button\\">Get RSS</a>
                </div>
            </div>
        </form>
        <div id=\\"list-rss\\"></div>
    </div>
</div>"
`;

exports[`Init 1`] = `
"<div id=\\"application\\">
    <div class=\\"spinner\\">
        <div class=\\"bg-white opct fixed-top h-100 w-100 d-flex align-items-center justify-content-center\\">
            <div class=\\"spinner-border text-info p-4\\" role=\\"status\\">
                <span class=\\"sr-only\\">Loading...</span>
            </div>
        </div>
    </div>
    <div class=\\"modal fade\\" id=\\"modal-post\\" tabindex=\\"-1\\" role=\\"dialog\\" aria-labelledby=\\"infoModalLabel\\" aria-hidden=\\"true\\">
        <div class=\\"modal-dialog\\" role=\\"document\\">
            <div class=\\"modal-content\\">
                <div class=\\"modal-header\\">
                    <h5 class=\\"modal-title\\" id=\\"modal-post-label\\"></h5>
                    <button type=\\"button\\" class=\\"close\\" data-dismiss=\\"modal\\" aria-label=\\"Close\\">
                        <span aria-hidden=\\"true\\">×</span>
                    </button>
                </div>
                <div class=\\"modal-body\\"></div>
            </div>
        </div>
    </div>
    <div class=\\"container\\">
        <div id=\\"example-links\\" class=\\"alert alert-info w-100\\">
            Example RSS links:
            <a href=\\"https://ru.hexlet.io/lessons.rss\\">Hexlet Lessons</a>,
            <a href=\\"https://ru.hexlet.io/blog.rss\\">Hexlet Blog</a>,
            <a href=\\"http://lorem-rss.herokuapp.com/feed?unit=second&amp;interval=1\\">Lorem RSS 1 sec</a>,
            <a href=\\"http://lorem-rss.herokuapp.com/feed?unit=minute&amp;interval=1\\">Lorem RSS 1 min</a>,
            <a href=\\"http://lorem-rss.herokuapp.com/feed?unit=minute&amp;interval=7\\">Invalid Lorem RSS</a>,
            <a href=\\"http://lorem-rss.herokuapp.com/feed?unit=minute&amp;interval=70\\">Second Invalid Lorem RSS</a>,
            <a href=\\"http://feeds.bbci.co.uk/news/rss.xml\\">BBC News</a>
        </div>
        <form id=\\"form\\" class=\\"jumbotron pb-4 pt-4\\">
            <div class=\\"input-group\\">
                <div class=\\"input-group-prepend\\">
                    <span class=\\"input-group-text\\" id=\\"basic-addon1\\">Insert your RSS link</span>
                </div>
                <input name=\\"url\\" type=\\"text\\" id=\\"input-rss\\" class=\\"form-control alert-dark\\" placeholder=\\"Enter RSS link\\" aria-label=\\"RSS Link\\" aria-describedby=\\"basic-addon1\\">
                <div class=\\"input-group-append\\">
                    <a class=\\"btn btn-outline-secondary\\" id=\\"add-rss\\" role=\\"button\\">Get RSS</a>
                </div>
            </div>
        </form>
        <div id=\\"list-rss\\"></div>
    </div>
</div>"
`;

exports[`Show error message 1`] = `
"<div id=\\"application\\">
    <div class=\\"toast mt-0 w-100 alert alert-danger alert-dismissible fade show\\" role=\\"alert\\" style=\\"position: absolute;\\">
        <h4 class=\\"alert-title\\">Error</h4>
        <div class=\\"alert-body\\">Couldn't get a RSS feed: <a target=\\"_blank\\" class=\\"alert-url\\" href=\\"http://localhost/feed\\">http://localhost/feed</a></div>
        <button type=\\"button\\" class=\\"close\\" data-dismiss=\\"alert\\" aria-label=\\"Close\\">
            <span aria-hidden=\\"true\\">×</span>
        </button>
    </div>
    <div class=\\"toast mt-0 w-100 alert alert-danger alert-dismissible fade show\\" role=\\"alert\\" style=\\"position: absolute;\\">
        <h4 class=\\"alert-title\\">Error</h4>
        <div class=\\"alert-body\\">Couldn't get a RSS feed: <a target=\\"_blank\\" class=\\"alert-url\\" href=\\"http://localhost/feed\\">http://localhost/feed</a></div>
        <button type=\\"button\\" class=\\"close\\" data-dismiss=\\"alert\\" aria-label=\\"Close\\">
            <span aria-hidden=\\"true\\">×</span>
        </button>
    </div>
    <div class=\\"toast mt-0 w-100 alert alert-danger alert-dismissible fade show\\" role=\\"alert\\" style=\\"position: absolute;\\">
        <h4 class=\\"alert-title\\">Error</h4>
        <div class=\\"alert-body\\">Couldn't get a RSS feed: <a target=\\"_blank\\" class=\\"alert-url\\" href=\\"\\"></a></div>
        <button type=\\"button\\" class=\\"close\\" data-dismiss=\\"alert\\" aria-label=\\"Close\\">
            <span aria-hidden=\\"true\\">×</span>
        </button>
    </div>
    <div class=\\"spinner\\" style=\\"display: none;\\">
        <div class=\\"bg-white opct fixed-top h-100 w-100 d-flex align-items-center justify-content-center\\">
            <div class=\\"spinner-border text-info p-4\\" role=\\"status\\">
                <span class=\\"sr-only\\">Loading...</span>
            </div>
        </div>
    </div>
    <div class=\\"modal fade show\\" id=\\"modal-post\\" tabindex=\\"-1\\" role=\\"dialog\\" aria-labelledby=\\"infoModalLabel\\" style=\\"padding-right: 0px; display: block;\\" aria-modal=\\"true\\">
        <div class=\\"modal-dialog\\" role=\\"document\\">
            <div class=\\"modal-content\\">
                <div class=\\"modal-header\\">
                    <h5 class=\\"modal-title\\" id=\\"modal-post-label\\">http://example.com/test/1569324660</h5>
                    <button type=\\"button\\" class=\\"close\\" data-dismiss=\\"modal\\" aria-label=\\"Close\\">
                        <span aria-hidden=\\"true\\">×</span>
                    </button>
                </div>
                <div class=\\"modal-body\\">Qui deserunt excepteur eiusmod occaecat est qui excepteur laborum culpa exercitation.</div>
            </div>
        </div>
    </div>
    <div class=\\"container\\">
        <div id=\\"example-links\\" class=\\"alert alert-info w-100\\">
            Example RSS links:
            <a href=\\"https://ru.hexlet.io/lessons.rss\\">Hexlet Lessons</a>,
            <a href=\\"https://ru.hexlet.io/blog.rss\\">Hexlet Blog</a>,
            <a href=\\"http://lorem-rss.herokuapp.com/feed?unit=second&amp;interval=1\\">Lorem RSS 1 sec</a>,
            <a href=\\"http://lorem-rss.herokuapp.com/feed?unit=minute&amp;interval=1\\">Lorem RSS 1 min</a>,
            <a href=\\"http://lorem-rss.herokuapp.com/feed?unit=minute&amp;interval=7\\">Invalid Lorem RSS</a>,
            <a href=\\"http://lorem-rss.herokuapp.com/feed?unit=minute&amp;interval=70\\">Second Invalid Lorem RSS</a>,
            <a href=\\"http://feeds.bbci.co.uk/news/rss.xml\\">BBC News</a>
        </div>
        <form id=\\"form\\" class=\\"jumbotron pb-4 pt-4\\">
            <div class=\\"input-group\\">
                <div class=\\"input-group-prepend\\">
                    <span class=\\"input-group-text\\" id=\\"basic-addon1\\">Insert your RSS link</span>
                </div>
                <input name=\\"url\\" type=\\"text\\" id=\\"input-rss\\" class=\\"form-control alert-dark\\" placeholder=\\"Enter RSS link\\" aria-label=\\"RSS Link\\" aria-describedby=\\"basic-addon1\\">
                <div class=\\"input-group-append\\">
                    <a class=\\"btn btn-outline-secondary\\" id=\\"add-rss\\" role=\\"button\\">Get RSS</a>
                </div>
            </div>
        </form>
        <div id=\\"list-rss\\">
            <div class=\\"feed\\">
                <h5>Lorem ipsum feed for an interval of 1 minutes</h5>
                <p>This is a constantly updating lorem ipsum feed</p>
                <div class=\\"content\\">
                    <div class=\\"item mb-1 mt-1 d-flex align-items-center\\">
                        <button tabindex=\\"0\\" type=\\"button\\" class=\\"open-post btn-sm btn btn-info p-0 mr-2\\" data-toggle=\\"modal\\" data-target=\\"#infoModal\\" data-link=\\"http://example.com/test/1569324660\\">
                            Open
                        </button>
                        <a href=\\"http://example.com/test/1569324660\\" target=\\"_blank\\">Lorem ipsum 2019-09-24T11:31:00Z</a>
                    </div>
                    <div class=\\"item mb-1 mt-1 d-flex align-items-center\\">
                        <button tabindex=\\"0\\" type=\\"button\\" class=\\"open-post btn-sm btn btn-info p-0 mr-2\\" data-toggle=\\"modal\\" data-target=\\"#infoModal\\" data-link=\\"http://example.com/test/1569324600\\">
                            Open
                        </button>
                        <a href=\\"http://example.com/test/1569324600\\" target=\\"_blank\\">Lorem ipsum 2019-09-24T11:30:00Z</a>
                    </div>
                    <div class=\\"item mb-1 mt-1 d-flex align-items-center\\">
                        <button tabindex=\\"0\\" type=\\"button\\" class=\\"open-post btn-sm btn btn-info p-0 mr-2\\" data-toggle=\\"modal\\" data-target=\\"#infoModal\\" data-link=\\"http://example.com/test/1569324540\\">
                            Open
                        </button>
                        <a href=\\"http://example.com/test/1569324540\\" target=\\"_blank\\">Lorem ipsum 2019-09-24T11:29:00Z</a>
                    </div>
                    <div class=\\"item mb-1 mt-1 d-flex align-items-center\\">
                        <button tabindex=\\"0\\" type=\\"button\\" class=\\"open-post btn-sm btn btn-info p-0 mr-2\\" data-toggle=\\"modal\\" data-target=\\"#infoModal\\" data-link=\\"http://example.com/test/1569324480\\">
                            Open
                        </button>
                        <a href=\\"http://example.com/test/1569324480\\" target=\\"_blank\\">Lorem ipsum 2019-09-24T11:28:00Z</a>
                    </div>
                    <div class=\\"item mb-1 mt-1 d-flex align-items-center\\">
                        <button tabindex=\\"0\\" type=\\"button\\" class=\\"open-post btn-sm btn btn-info p-0 mr-2\\" data-toggle=\\"modal\\" data-target=\\"#infoModal\\" data-link=\\"http://example.com/test/1569324420\\">
                            Open
                        </button>
                        <a href=\\"http://example.com/test/1569324420\\" target=\\"_blank\\">Lorem ipsum 2019-09-24T11:27:00Z</a>
                    </div>
                    <div class=\\"item mb-1 mt-1 d-flex align-items-center\\">
                        <button tabindex=\\"0\\" type=\\"button\\" class=\\"open-post btn-sm btn btn-info p-0 mr-2\\" data-toggle=\\"modal\\" data-target=\\"#infoModal\\" data-link=\\"http://example.com/test/1569324360\\">
                            Open
                        </button>
                        <a href=\\"http://example.com/test/1569324360\\" target=\\"_blank\\">Lorem ipsum 2019-09-24T11:26:00Z</a>
                    </div>
                    <div class=\\"item mb-1 mt-1 d-flex align-items-center\\">
                        <button tabindex=\\"0\\" type=\\"button\\" class=\\"open-post btn-sm btn btn-info p-0 mr-2\\" data-toggle=\\"modal\\" data-target=\\"#infoModal\\" data-link=\\"http://example.com/test/1569324300\\">
                            Open
                        </button>
                        <a href=\\"http://example.com/test/1569324300\\" target=\\"_blank\\">Lorem ipsum 2019-09-24T11:25:00Z</a>
                    </div>
                    <div class=\\"item mb-1 mt-1 d-flex align-items-center\\">
                        <button tabindex=\\"0\\" type=\\"button\\" class=\\"open-post btn-sm btn btn-info p-0 mr-2\\" data-toggle=\\"modal\\" data-target=\\"#infoModal\\" data-link=\\"http://example.com/test/1569324240\\">
                            Open
                        </button>
                        <a href=\\"http://example.com/test/1569324240\\" target=\\"_blank\\">Lorem ipsum 2019-09-24T11:24:00Z</a>
                    </div>
                    <div class=\\"item mb-1 mt-1 d-flex align-items-center\\">
                        <button tabindex=\\"0\\" type=\\"button\\" class=\\"open-post btn-sm btn btn-info p-0 mr-2\\" data-toggle=\\"modal\\" data-target=\\"#infoModal\\" data-link=\\"http://example.com/test/1569324180\\">
                            Open
                        </button>
                        <a href=\\"http://example.com/test/1569324180\\" target=\\"_blank\\">Lorem ipsum 2019-09-24T11:23:00Z</a>
                    </div>
                    <div class=\\"item mb-1 mt-1 d-flex align-items-center\\">
                        <button tabindex=\\"0\\" type=\\"button\\" class=\\"open-post btn-sm btn btn-info p-0 mr-2\\" data-toggle=\\"modal\\" data-target=\\"#infoModal\\" data-link=\\"http://example.com/test/1569324120\\">
                            Open
                        </button>
                        <a href=\\"http://example.com/test/1569324120\\" target=\\"_blank\\">Lorem ipsum 2019-09-24T11:22:00Z</a>
                    </div>
                </div>
                <hr>
            </div>
        </div>
    </div>
</div>



<div class=\\"modal-backdrop fade show\\"></div>"
`;
